results/SVCOMP/4-shot/log-assert2-2024_03_18_06_18_26.txt
import java.util.Random;

class assert2 {
    //@ ensures \nothing;
    public static void main() {
        int i = new Random().nextInt();

        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:4: error: incompatible types: <none> cannot be converted to boolean
    //@ ensures \nothing;
                ^
1 error

